--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   },
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
-    "build": "next build && node scripts/build-atom > public/atom"
+    "build": "next build"
   },
   "prettier": {
     "arrowParens": "avoid"
