--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "eslint": "^8.18.0",
     "eslint-config-next": "^12.1.6",
     "prettier": "^2.2.1",
-    "typescript": "^4.7.3"
+    "remark-mdx": "^2.3.0",
+    "remark-parse": "^10.0.1",
+    "typescript": "^4.7.3",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^4.1.2"
   },
   "pnpm": {
     "peerDependencyRules": {
